apps/mkdocs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkdocs
  namespace: mkdocs
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "mkdocs"
    kube-vip.io/loadbalancerIPs: "${LAN_PREFIX}.37"
spec:
  type: LoadBalancer
  selector:
    app: mkdocs
  ports:
    - port: 6080
      targetPort: http
      protocol: TCP
      name: mkdocs-http
